force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Backfill_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Backfill_Date__c</fullName>
    <description>If an employee is being backfilled, enter the expected date of departure.</description>
    <label>Backfill Date</label>
    <type>Date</type>
</CustomField>