force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Backfill_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Backfill_Name__c</fullName>
    <label>Backfill Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>