force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>agf__Business_Unit__c</fullName>
    <label>Business Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>