force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__City__c.field-meta.xml
<CustomField>
    <fullName>agf__City__c</fullName>
    <description>City field copied from User record</description>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>