force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>agf__Cost_Center__c</fullName>
    <label>Cost Center</label>
    <length>100</length>
    <type>Text</type>
</CustomField>