force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Country__c.field-meta.xml
<CustomField>
    <fullName>agf__Country__c</fullName>
    <description>Sticking with the length information mentioned here https://developer.salesforce.com/docs/atlas.en-us.api.meta/api/sforce_api_objects_user.htm</description>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>