force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Description__c.field-meta.xml
<CustomField>
    <fullName>agf__Description__c</fullName>
    <inlineHelpText>Free-text area to record notes on this Headcount.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>