force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Division__c.field-meta.xml
<CustomField>
    <fullName>agf__Division__c</fullName>
    <label>Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>