force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Effective_Date__c</fullName>
    <inlineHelpText>Effective quarter to hire headcount.  Only Finance can move headcount from quarter to quarter.</inlineHelpText>
    <label>Effective Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FY12-Q4</fullName>
            </value>
            <value>
                <fullName>FY13-Q1</fullName>
                <default>true</default>
                <label>FY13-Q1</label>
            </value>
            <value>
                <fullName>FY13-Q2</fullName>
            </value>
            <value>
                <fullName>FY13-Q3</fullName>
            </value>
            <value>
                <fullName>FY13-Q4</fullName>
            </value>
            <value>
                <fullName>FY14-Q1</fullName>
            </value>
            <value>
                <fullName>FY14-Q2</fullName>
            </value>
            <value>
                <fullName>FY14-Q3</fullName>
            </value>
            <value>
                <fullName>FY14-Q4</fullName>
            </value>
            <value>
                <fullName>FY15-Q1</fullName>
            </value>
            <value>
                <fullName>FY15-Q2</fullName>
            </value>
            <value>
                <fullName>FY15-Q3</fullName>
            </value>
            <value>
                <fullName>FY15-Q4</fullName>
            </value>
            <value>
                <fullName>FY16-Q1</fullName>
            </value>
            <value>
                <fullName>FY16-Q2</fullName>
            </value>
            <value>
                <fullName>FY16-Q3</fullName>
            </value>
            <value>
                <fullName>FY16-Q4</fullName>
            </value>
            <value>
                <fullName>FY17-Q1</fullName>
            </value>
            <value>
                <fullName>FY17-Q2</fullName>
            </value>
            <value>
                <fullName>FY17-Q3</fullName>
            </value>
            <value>
                <fullName>FY17-Q4</fullName>
            </value>
            <value>
                <fullName>FY18-Q1</fullName>
            </value>
            <value>
                <fullName>FY18-Q2</fullName>
            </value>
            <value>
                <fullName>FY18-Q3</fullName>
            </value>
            <value>
                <fullName>FY18-Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>