force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Employee_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>agf__Employee_Name_Text__c</fullName>
    <description>A text copy of the Employee Name field necessary because lookup fields are not indexed and not searchable.  Only text, email and phone field types are searched:
https://help.salesforce.com/HTViewHelpDoc?id=search_fields_custom_object.htm&amp;language=en_US)</description>
    <label>Employee Name (Text)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>