force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__FY_Starting_Cloud__c.field-meta.xml
<CustomField>
    <fullName>agf__FY_Starting_Cloud__c</fullName>
    <label>FY Starting Cloud</label>
    <length>100</length>
    <type>Text</type>
</CustomField>