force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Headcount_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Headcount_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of employee filling the position (lookup to User)</inlineHelpText>
    <label>Employee Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Headcounts</relationshipName>
    <type>Lookup</type>
</CustomField>