force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Hiring_Manager_Department__c.field-meta.xml
<CustomField>
    <fullName>agf__Hiring_Manager_Department__c</fullName>
    <description>The department of the hiring manager, derived from the User record.</description>
    <formula>agf__Hiring_Manager__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hiring Manager Department</label>
    <type>Text</type>
</CustomField>