force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Initial_Status_Value__c.field-meta.xml
<CustomField>
    <fullName>agf__Initial_Status_Value__c</fullName>
    <label>Initial Status Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>