force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Manager_Status__c.field-meta.xml
<CustomField>
    <fullName>agf__Manager_Status__c</fullName>
    <description>Manager&apos;s -GYR signal for recruiting status on this position.</description>
    <inlineHelpText>Blank: no activity on this position 
Green: Likely to close within the assigned quarter 
Yellow: May close within the assigned quarter but I&apos;m not confident 
Red: Unlikely to close within assigned quarter
Blue: May close before assigned quarter</inlineHelpText>
    <label>Manager Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>