force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Manager_Update__c.field-meta.xml
<CustomField>
    <fullName>agf__Manager_Update__c</fullName>
    <description>Text description of Manager Status</description>
    <inlineHelpText>Enter your update here for hiring status on this position. Do not include confidential information.</inlineHelpText>
    <label>Manager Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>