force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__OOM__c.field-meta.xml
<CustomField>
    <fullName>agf__OOM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Open Market Opportunity</label>
    <referenceTo>agf__OMOpportunity__c</referenceTo>
    <relationshipLabel>Roster</relationshipLabel>
    <relationshipName>Roster</relationshipName>
    <type>Lookup</type>
</CustomField>