force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__OOM_Transfer__c.field-meta.xml
<CustomField>
    <fullName>agf__OOM_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OOM Transfer?</label>
    <type>Checkbox</type>
</CustomField>