force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__OOM_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__OOM_Transfer_Date__c</fullName>
    <label>OOM Transfer Date</label>
    <type>DateTime</type>
</CustomField>