force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Organization__c.field-meta.xml
<CustomField>
    <fullName>agf__Organization__c</fullName>
    <description>Functional Organization</description>
    <label>Organization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CCE</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>IT Apps</fullName>
            </value>
            <value>
                <fullName>IT Infra</fullName>
            </value>
            <value>
                <fullName>PerfEng</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>QE</fullName>
            </value>
            <value>
                <fullName>SOMA</fullName>
            </value>
            <value>
                <fullName>T&amp;P Shared</fullName>
            </value>
            <value>
                <fullName>TechOps</fullName>
            </value>
            <value>
                <fullName>TPL</fullName>
            </value>
            <value>
                <fullName>TPM</fullName>
            </value>
            <value>
                <fullName>UX</fullName>
            </value>
            <value>
                <fullName>UE</fullName>
            </value>
            <value>
                <fullName>Global Recruiting</fullName>
            </value>
            <value>
                <fullName>ISV</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Product Marketing</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Real Estate Management</fullName>
            </value>
            <value>
                <fullName>Renewals</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Salesforce University</fullName>
            </value>
            <value>
                <fullName>Site Reliability</fullName>
            </value>
            <value>
                <fullName>Strategy &amp; Ops</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Sys Eng</fullName>
            </value>
            <value>
                <fullName>Trust Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>