force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Original_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Original_Effective_Date__c</fullName>
    <description>Stores the original Effective Date when a position is created</description>
    <label>Original Effective Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>