force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Recruiter__c.field-meta.xml
<CustomField>
    <fullName>agf__Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruiter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Roster</relationshipName>
    <type>Lookup</type>
</CustomField>