force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Region__c.field-meta.xml
<CustomField>
    <fullName>agf__Region__c</fullName>
    <inlineHelpText>Region is set by Finance.</inlineHelpText>
    <label>Region_Deprecated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americas - Canada</fullName>
            </value>
            <value>
                <fullName>Americas - USA</fullName>
            </value>
            <value>
                <fullName>APAC - All Countries</fullName>
            </value>
            <value>
                <fullName>EMEA - All Countries</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Americas - Latin America</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>