force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Signal__c.field-meta.xml
<CustomField>
    <fullName>agf__Signal__c</fullName>
    <description>Only records showing green are open for hiring. Records showing yellow may become open again, but currently are not open.</description>
    <formula>IMAGE(
CASE( agf__Status__c ,
&quot;Open - New&quot;, &quot;/img/samples/color_green.gif&quot;,
&quot;Open - Backfill&quot;, &quot;/img/samples/color_green.gif&quot;,
&quot;Offer in Progress&quot;, &quot;/img/samples/color_yellow.gif&quot;,
&quot;Offer Accepted&quot;, &quot;/img/samples/color_yellow.gif&quot;,
&quot;Filled&quot;, &quot;/img/samples/color_red.gif&quot;,
&quot;/s.gif&quot;),
&quot;status color&quot;,15,30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Only records showing green are open for hiring. Records showing yellow may become open again, but currently are not open.</inlineHelpText>
    <label>Offer Signal</label>
    <type>Text</type>
</CustomField>