force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Source_Description__c.field-meta.xml
<CustomField>
    <fullName>agf__Source_Description__c</fullName>
    <description>A place for notes related to the source field.</description>
    <inlineHelpText>A place for notes related to the source field.</inlineHelpText>
    <label>Source Description</label>
    <type>TextArea</type>
</CustomField>