force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__State__c.field-meta.xml
<CustomField>
    <fullName>agf__State__c</fullName>
    <description>State field copied from User record</description>
    <label>State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>