force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Talentforce_Offer__c.field-meta.xml
<CustomField>
    <fullName>agf__Talentforce_Offer__c</fullName>
    <inlineHelpText>Reference to Job ID in Talentforce, entered by Recruiting.</inlineHelpText>
    <label>Job ID</label>
    <length>14</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>