force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Target_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Target_Start_Date__c</fullName>
    <inlineHelpText>Target start date for candidates that have accepted an offer</inlineHelpText>
    <label>Target Start Date</label>
    <type>Date</type>
</CustomField>