force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Team__c.field-meta.xml
<CustomField>
    <fullName>agf__Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Scrum Team assigned to the position.</inlineHelpText>
    <label>Team</label>
    <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
    <relationshipName>Headcount</relationshipName>
    <type>Lookup</type>
</CustomField>