force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Headcount__c/fields/agf__Team_Cloud__c.field-meta.xml
<CustomField>
    <fullName>agf__Team_Cloud__c</fullName>
    <formula>agf__Team__r.agf__Cloud_LU__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The cloud field is calculated by the team assigned to the roster record.</inlineHelpText>
    <label>Cloud</label>
    <type>Text</type>
</CustomField>